test/functional/ASTPrinter/import_aliases_error.glu
//
// RUN: not gluc %s 2>&1 | FileCheck -v %s
//

// CHECK: error: Cannot apply module alias to multiple selectors
import foo::{a, b} as bar;
